tests/fixtures/negative/complexity/MethodOverloading.kt
package complexity

class MethodOverloading {
    fun process() {}
    fun process(a: Int) {}
    fun process(a: String) {}
}
